--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task,
+.task-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
@@ -35,16 +36,16 @@ body {
   display: flex;
 }
 ul {
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
 li,
 h3 {
-  list-style:none;
+  list-style: none;
 }
 input,
 button {
-  outline:none;
+  outline: none;
 }
 button {
   background: none;
@@ -69,7 +70,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.task-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -81,7 +82,7 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task-text:focus {
   color: #333;
 }
 /* New Task */
@@ -104,7 +105,7 @@ li {
 li > * {
   vertical-align: middle;
 }
-li > input[type="checkbox"] {
+li > .checkbox {
   margin: 0 10px;
 }
 li > label {
@@ -113,7 +114,7 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+li > .task-text {
   width: 226px;
 }
 button.delete img {
@@ -129,13 +130,13 @@ ul#completed-tasks label {
   text-decoration: line-through #888;
 }
 /* Edit Task */
-ul li input[type="text"] {
-  display:none;
+ul li .task-text {
+  display: none;
 }
-ul li.edit-mode input[type="text"] {
-  display:inline-block;
-  width:224px;
+ul li.edit-mode .task-text {
+  display: inline-block;
+  width: 224px;
 }
 ul li.edit-mode label {
-  display:none;
+  display: none;
 }
