--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ li > .task-text {
   transform: rotateZ(0);
 }
 /* Completed */
-ul#completed-tasks label {
+ul#done-tasks label {
   text-decoration: line-through #888;
 }
 /* Edit Task */
