fix: edit remarks of Reviewer

--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
 /* Basic Style */
-body {
+.contetnt {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-header {
+.roof {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-header img {
+.roof img {
   width: 100%;
 }
-header .more-inf {
+.roof .more-inf {
   font-family: fantasy, cursive;
 }
-@media (max-width:768px) {
-  header {
+@media (max-width: 768px) {
+  .roof {
     text-align: center;
   }
 }
-main {
+.center {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -75,8 +75,8 @@ h3 {
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
+  border: 1px solid #ddd;
+  background: #fff;
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
